customer commets and coustomer touch
