# schainbackend/app/Http/Requests/UpdateCustomerTouchMappingRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateCustomerTouchMappingRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'user_id' => 'sometimes|required|integer|exists:user_details,user_id',
+            'customer_touch_id' => 'sometimes|required|integer|exists:customer_touch,item_id',
+            'is_active' => 'sometimes|boolean',
+        ];
+    }
+}
